[gd_scene load_steps=3 format=3 uid="uid://1ruf1hgc7hdk"]

[ext_resource type="Theme" uid="uid://b15oim178hdr1" path="res://scenes/Assets/Themes/default_theme.tres" id="1_nptkr"]
[ext_resource type="Script" path="res://scenes/UI/menu.gd" id="2_71ob2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nptkr")
script = ExtResource("2_71ob2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.321569, 0.521569, 0.635294, 0.380392)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="ReturnToGameButton" type="Button" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../GridContainer/MusicSlider")
focus_next = NodePath("../GridContainer/MusicSlider")
focus_previous = NodePath("../QuitButton")
text = "Continue Game"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../ReturnToGameButton")
focus_neighbor_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
focus_previous = NodePath("../../ReturnToGameButton")
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../../MainMenuButton")
focus_next = NodePath("../../MainMenuButton")
focus_previous = NodePath("../MusicSlider")
max_value = 1.0
step = 0.05
value = 1.0

[node name="MainMenuButton" type="Button" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../GridContainer/SFXSlider")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../GridContainer/SFXSlider")
text = "Return to menu
"

[node name="QuitButton" type="Button" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../ReturnToGameButton")
focus_next = NodePath("../ReturnToGameButton")
focus_previous = NodePath("../MainMenuButton")
text = "Quit Game"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/ReturnToGameButton" to="." method="_on_return_to_game_button_pressed"]
[connection signal="value_changed" from="MarginContainer/ButtonsVBox/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/ButtonsVBox/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/QuitButton" to="." method="_on_quit_button_pressed"]
